# src/main/java/com/impactdryer/deviceapi/devicemanagment/application/RegisterDeviceHandler.java
@@ -1,7 +1,5 @@
 package com.impactdryer.deviceapi.devicemanagment.application;
 
-import java.util.UUID;
-
 public interface RegisterDeviceHandler {
-  UUID registerDevice(RegisterDeviceCommand command);
+    Long registerDevice(RegisterDeviceCommand command);
 }
