# src/main/java/com/impactdryer/deviceapi/devicemanagment/domain/DeviceType.java
@@ -1,7 +1,16 @@
 package com.impactdryer.deviceapi.devicemanagment.domain;
 
 public enum DeviceType {
-  GATEWAY,
-  SWITCH,
-  ACCESS_POINT
+    GATEWAY("Gateway"),
+    SWITCH("Switch"),
+    ACCESS_POINT("Access Point");
+    private final String value;
+
+    DeviceType(String value) {
+        this.value = value;
+    }
+
+    public String getValue() {
+        return value;
+    }
 }
