# src/main/java/com/impactdryer/deviceapi/devicemanagment/infrastructure/DeviceInfrastructureService.java
@@ -1,0 +1,12 @@
+package com.impactdryer.deviceapi.devicemanagment.infrastructure;
+
+import com.impactdryer.deviceapi.devicemanagment.domain.DeviceRegistration;
+import com.impactdryer.deviceapi.devicemanagment.domain.MacAddress;
+import jakarta.transaction.Transactional;
+
+public interface DeviceInfrastructureService {
+    @Transactional
+    Long registerDevice(DeviceRegistration deviceRegistration);
+
+    DeviceRegistration getDeviceByMac(MacAddress mac);
+}
